add platform + terms + privacy links

--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -60,7 +60,7 @@
       },
       {
         "title": "Analytique en temps réel",
-        "description": "Tableaux de bord actionnables pour stocks, ventes et performance de la chaîne avec insights prédictifs."
+        "description": "Tableaux de bord actionnables pour stocks, ventes et performance de la chaîne avec Analyses prédictifs."
       },
       {
         "title": "Paiements sécurisés",
